--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	      </div>
 	    </div>
 	  </nav>
-	  <section id="home-section" class="hero">
+	  <section id="home-section " class="hero">
 		  <div class="home-slider  owl-carousel">
 	      <div class="slider-item ">
 	      	<div class="overlay"></div>
@@ -101,14 +101,14 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <p>Creative graphic designer with 8+ years of experience in the photo industry. Proven ability to create engaging and visually appealing designs for a variety of marketing materials. Expertise in typography, layout, and color theory.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Clark Thompson</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1987</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>clarkthomp@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Kasun Sanjaya Muhandiram</span></li>
+		            	<li class="d-flex"><span>Date of birth:</span> <span>November 20, 1994</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>290/A, Pahala Imbulgoda, Sri Lanka</span></li>
+		            	<li class="d-flex"><span>Zip code:</span> <span>11858</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>kasun_sanjaya@icloud.com</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span><a href="tel:+94 76 044 3517"></a>+94 76 044 3517</span></li>
 		            </ul>
 		          </div>
 		        </div>
