--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 		            	<li class="d-flex"><span>Zip code:</span> <span>11858</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>kasun_sanjaya@icloud.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span><a href="tel:+94 76 044 3517"></a>+94 76 044 3517</span></li>
+															<li class="d-flex"><span>WhatsApp: </span> <span><a href="https://wa.me/+94760443517">Click here to chat on WhatsApp</a>+94 76 044 3517</span></li>
 		            </ul>
 		          </div>
 		        </div>
