--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             <h1 class="big big-2">My Skills</h1>
             <h2 class="mb-4">My Skills</h2>
             <p>
-              Creative and experienced graphic designer
+              Creative and experienced Graphic Designer
             </p>
           </div>
         </div>
@@ -404,56 +404,39 @@
                 <div
                   class="progress-bar color-1"
                   role="progressbar"
-                  aria-valuenow="90"
+                  aria-valuenow="100"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 90%"
+                  style="width: 100%"
                 >
-                  <span>90%</span>
+                  <span>100%</span>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
-              <h3>jQuery</h3>
+              <h3>Illustrator</h3>
               <div class="progress">
                 <div
                   class="progress-bar color-2"
                   role="progressbar"
-                  aria-valuenow="85"
+                  aria-valuenow="90"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 85%"
+                  style="width: 90%"
                 >
-                  <span>85%</span>
+                  <span>90%</span>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
-              <h3>HTML5</h3>
+              <h3>CorelDraw</h3>
               <div class="progress">
                 <div
                   class="progress-bar color-3"
-                  role="progressbar"
-                  aria-valuenow="95"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 95%"
-                >
-                  <span>95%</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 animate-box">
-            <div class="progress-wrap ftco-animate">
-              <h3>CSS3</h3>
-              <div class="progress">
-                <div
-                  class="progress-bar color-4"
                   role="progressbar"
                   aria-valuenow="90"
                   aria-valuemin="0"
@@ -467,34 +450,51 @@
           </div>
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
-              <h3>WordPress</h3>
+              <h3>InDesign</h3>
               <div class="progress">
                 <div
-                  class="progress-bar color-5"
+                  class="progress-bar color-4"
                   role="progressbar"
-                  aria-valuenow="70"
+                  aria-valuenow="75"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 70%"
+                  style="width: 75%"
                 >
-                  <span>70%</span>
+                  <span>75%</span>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
-              <h3>SEO</h3>
+              <h3>Video Editing</h3>
+              <div class="progress">
+                <div
+                  class="progress-bar color-5"
+                  role="progressbar"
+                  aria-valuenow="50"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 50%"
+                >
+                  <span>50%</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate">
+              <h3>MS Office</h3>
               <div class="progress">
                 <div
                   class="progress-bar color-6"
                   role="progressbar"
-                  aria-valuenow="80"
+                  aria-valuenow="50"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 80%"
+                  style="width: 50%"
                 >
-                  <span>80%</span>
+                  <span class="ms-auto">50%</span>
                 </div>
               </div>
             </div>
@@ -507,11 +507,10 @@
       <div class="container">
         <div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
+            <h1 class="big big-2">My Projects</h1>
+            <h2 class="mb-4">My Projects</h2>
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia
+              A collection of my best work, showcasing my skills and experience in graphic design.
             </p>
           </div>
         </div>
