--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
                     <span>Zip code:</span> <span>11858</span>
                   </li>
                   <li class="d-flex">
-                    <span>Email:</span> <span>kasun_sanjaya@icloud.com</span>
+                    <span>Email:</span> <span><a href="mailto:kasun_sanjaya@icloud.com"></a>kasun_sanjaya@icloud.com</span>
                   </li>
                   <li class="d-flex">
                     <span>Phone: </span>
                     <span
-                      ><a href="tel:+94 76 044 3517"></a>+94 76 044 3517</span
+                      ><a href="tel:+94 76 044 3517">+94 76 044 3517</a></span
                     >
                   </li>
                   <li class="d-flex">
@@ -624,182 +624,6 @@
       </div>
     </section>
 
-    <section class="ftco-section" id="blog-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Blog</h1>
-            <h2 class="mb-4">Our Blog</h2>
-            <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia
-            </p>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <a
-                href="single.html"
-                class="block-20"
-                style="background-image: url('images/image_1.jpg')"
-              >
-              </a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-3 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">June 21, 2019</span>
-                    <a href="#" class="mr-2">Admin</a>
-                    <a href="#" class="meta-chat"
-                      ><span class="icon-chat"></span> 3</a
-                    >
-                  </p>
-                </div>
-                <h3 class="heading">
-                  <a href="single.html"
-                    >Why Lead Generation is Key for Business Growth</a
-                  >
-                </h3>
-                <p>
-                  A small river named Duden flows by their place and supplies it
-                  with the necessary regelialia.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry justify-content-end">
-              <a
-                href="single.html"
-                class="block-20"
-                style="background-image: url('images/image_2.jpg')"
-              >
-              </a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-3 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">June 21, 2019</span>
-                    <a href="#" class="mr-2">Admin</a>
-                    <a href="#" class="meta-chat"
-                      ><span class="icon-chat"></span> 3</a
-                    >
-                  </p>
-                </div>
-                <h3 class="heading">
-                  <a href="single.html"
-                    >Why Lead Generation is Key for Business Growth</a
-                  >
-                </h3>
-                <p>
-                  A small river named Duden flows by their place and supplies it
-                  with the necessary regelialia.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-            <div class="blog-entry">
-              <a
-                href="single.html"
-                class="block-20"
-                style="background-image: url('images/image_3.jpg')"
-              >
-              </a>
-              <div class="text mt-3 float-right d-block">
-                <div class="d-flex align-items-center mb-3 meta">
-                  <p class="mb-0">
-                    <span class="mr-2">June 21, 2019</span>
-                    <a href="#" class="mr-2">Admin</a>
-                    <a href="#" class="meta-chat"
-                      ><span class="icon-chat"></span> 3</a
-                    >
-                  </p>
-                </div>
-                <h3 class="heading">
-                  <a href="single.html"
-                    >Why Lead Generation is Key for Business Growth</a
-                  >
-                </h3>
-                <p>
-                  A small river named Duden flows by their place and supplies it
-                  with the necessary regelialia.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section
-      class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img"
-      id="section-counter"
-    >
-      <div class="container">
-        <div class="row d-md-flex align-items-center">
-          <div
-            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
-          >
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="100">0</strong>
-                <span>Awards</span>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
-          >
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="1200">0</strong>
-                <span>Complete Projects</span>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
-          >
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="1200">0</strong>
-                <span>Happy Customers</span>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
-          >
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="500">0</strong>
-                <span>Cups of coffee</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section
-      class="ftco-section ftco-hireme img margin-top"
-      style="background-image: url(images/bg_1.jpg)"
-    >
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-7 ftco-animate text-center">
-            <h2>I'm <span>Available</span> for freelancing</h2>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              with the necessary regelialia.
-            </p>
-            <p class="mb-0">
-              <a href="#" class="btn btn-primary py-3 px-5">Hire me</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section
       class="ftco-section contact-section ftco-no-pb"
@@ -811,8 +635,7 @@
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia
+              I'd love to hear from you. If you have any feedback, suggestions, or just want to chat, please don't hesitate to contact me
             </p>
           </div>
         </div>
@@ -826,7 +649,7 @@
                 <span class="icon-map-signs"></span>
               </div>
               <h3 class="mb-4">Address</h3>
-              <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+              <p>290/A, Pahala Imbulgoda Sri Lanka 11858</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -837,7 +660,7 @@
                 <span class="icon-phone2"></span>
               </div>
               <h3 class="mb-4">Contact Number</h3>
-              <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+              <p><a href="tel:+94 76 044 3517">+94 76 044 3517</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -848,7 +671,7 @@
                 <span class="icon-paper-plane"></span>
               </div>
               <h3 class="mb-4">Email Address</h3>
-              <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+              <p><a href="mailto:kasun_sanjaya@icloud.com">kasun_sanjaya@icloud.com</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -858,8 +681,8 @@
               >
                 <span class="icon-globe"></span>
               </div>
-              <h3 class="mb-4">Website</h3>
-              <p><a href="#">yoursite.com</a></p>
+              <h3 class="mb-4">WhatsApp</h3>
+              <p><a href="https://wa.me/+94760443517">+94 76 044 3517</a></p>
             </div>
           </div>
         </div>
